--- a/PythonPractice.ipynb
+++ b/PythonPractice.ipynb
@@ -3,20 +3,21 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/abhaysaxena1904/Python_Practice/blob/main/PythonPractice.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "szIheDRwOSQn"
       },
       "source": [
-        "# Python Notebook\n"
+        "# Python Notebook from GitHub\n"
       ]
     },
     {
@@ -17932,9 +17933,9 @@
   ],
   "metadata": {
     "colab": {
+      "include_colab_link": true,
       "provenance": [],
-      "toc_visible": true,
-      "include_colab_link": true
+      "toc_visible": true
     },
     "kernelspec": {
       "display_name": "Python 3.10.5 64-bit (windows store)",
