creating PR in gitHub

--- a/PythonPractice.ipynb
+++ b/PythonPractice.ipynb
@@ -17,7 +17,8 @@
         "id": "szIheDRwOSQn"
       },
       "source": [
-        "# Python Notebook from GitHub\n"
+        "# Python Notebook from GitHub\n",
+        "Github First_branch merge "
       ]
     },
     {
